Archive2/6b/d8deffbf8256f5/output
main.cpp:8:29: error: invalid use of incomplete type 'class a'
         friend a::a(const a&);
                             ^
main.cpp:4:7: error: forward declaration of 'class a'
 class a;
       ^
